removed fixed min width, cards were overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,6 @@ p.text {
 .profile .card{
     border:1px solid #dc3545;
     background-color: #22252A;
-    min-width: 500px;
     margin-bottom: 10px;
 }
 
